@@ -305,9 +305,9 @@ generate_attach_a_constraint_t_p(A/B, Z) :-
 	get_max_constraint_index(H),
 	make_attr(H, K, I, T),
 	nth1(G, I, J),
-	substitute(J, I, [F|J], L),
+	substitute_eq(J, I, [F|J], L),
 	make_attr(H, K, L, U),
-	substitute(J, I, [F], M),
+	substitute_eq(J, I, [F], M),
 	make_attr(H, V, M, W),
 	copy_term_nat(I, N),
 	nth1(G, N, [F]),
@@ -348,9 +348,9 @@ generate_detach_a_constraint_t_p(A/B, Y) :-
 	get_max_constraint_index(H),
 	make_attr(H, L, I, Q),
 	nth1(G, I, J),
-	substitute(J, I, [], K),
+	substitute_eq(J, I, [], K),
 	make_attr(H, T, K, V),
-	substitute(J, I, S, M),
+	substitute_eq(J, I, S, M),
 	make_attr(H, L, M, W),
 	get_target_module(O),
 	A1= ((get_attr(N, O, P)->P=Q, (L/\R=:=R->'chr sbag_del_element'(J, F, S), (S==[]->T is L/\U, (T==0->del_attr(N, O);put_attr(N, O, V));put_attr(N, O, W));true);true), X),
