@@ -983,9 +983,9 @@ generate_attach_body_n(F/A,Var,Susp,Body) :-
 	get_max_constraint_index(Total),
 	make_attr(Total,Mask,SuspsList,Attr),
 	nth1(Position,SuspsList,Susps),
-	substitute(Susps,SuspsList,[Susp|Susps],SuspsList1),
+	substitute_eq(Susps,SuspsList,[Susp|Susps],SuspsList1),
 	make_attr(Total,Mask,SuspsList1,NewAttr1),
-	substitute(Susps,SuspsList,[Susp],SuspsList2),
+	substitute_eq(Susps,SuspsList,[Susp],SuspsList2),
 	make_attr(Total,NewMask,SuspsList2,NewAttr2),
 	copy_term_nat(SuspsList,SuspsList3),
 	nth1(Position,SuspsList3,[Susp]),
@@ -1069,9 +1069,9 @@ generate_detach_body_n(F/A,Var,Susp,Body) :-
 	get_max_constraint_index(Total),
 	make_attr(Total,Mask,SuspsList,Attr),
 	nth1(Position,SuspsList,Susps),
-	substitute(Susps,SuspsList,[],SuspsList1),
+	substitute_eq(Susps,SuspsList,[],SuspsList1),
 	make_attr(Total,NewMask,SuspsList1,Attr1),
-	substitute(Susps,SuspsList,NewSusps,SuspsList2),
+	substitute_eq(Susps,SuspsList,NewSusps,SuspsList2),
 	make_attr(Total,Mask,SuspsList2,Attr2),
 	get_target_module(Mod),
 	Body =
