@@ -1,3 +1,8 @@
+Mar 14, 2007
+
+  * TS: Renamed hprolog:substitute/4 to substitute_eq/4, because of
+	name conflict with library(edit).
+
 Mar 12, 2007
 
   * TS: Use line numbers in error and warning messages.
